--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <title>Zhaoyi's Homepage</title>
 </head>
 <body>
-Hello! This is Zhaoyi's Homepage. 
+<p>Hello! This is Zhaoyi's Homepage. </p>
+<p>My github account: geniuszhaoyi</p>
+<p>My bitbucket account: geniuszhaoyi</p>
+<p>My email: genius.zhaoyi@gmail.com</p>
 </body>
