--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <title>Zhaoyi's Homepage</title>
 </head>
 <body>
-<p>Hello! This is Zhaoyi's Homepage. </p>
-<p>My github account: geniuszhaoyi</p>
-<p>My bitbucket account: geniuszhaoyi</p>
-<p>My email: genius.zhaoyi@gmail.com</p>
+<p>Hello! This is Zhaoyi's Homepage. My name is Yi Zhao. </p>
+<p>My github account: <a href=https://github.com/geniuszhaoyi>geniuszhaoyi</a></p>
+<p>My bitbucket account: <a href=https://bitbucket.org/geniuszhaoyi>geniuszhaoyi</a></p>
+<p>My email: <a href="mailto:genius.zhaoyi@gmail.com">genius.zhaoyi@gmail.com</a></p>
 </body>
+
