--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
       <section>
       
       
-<h3><a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me. </h3>
-<p>My github account: <a href=https://github.com/geniuszhaoyi>geniuszhaoyi</a>, <br>
+<h3><a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me </h3>
+<p>
+My github account: <a href=https://github.com/geniuszhaoyi>geniuszhaoyi</a>, <br>
 My bitbucket account: <a href=https://bitbucket.org/geniuszhaoyi>geniuszhaoyi</a>, <br>
-My email: <a href="mailto:genius.zhaoyi@gmail.com">genius.zhaoyi@gmail.com</a>. </p>
+My email: <a href="mailto:genius.zhaoyi@gmail.com">genius.zhaoyi@gmail.com</a>. 
+</p>
 
+<h3><a id="who-am-i" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who am I </h3>
+<p>
+My name is Zhao, Yi. <br>
+I am an undergraduate in <a href=http://www.uestc.edu.cn>University of Electronic Science and Technology of Chine (UESTC)</a>. 
+</p>
 
       </section>
       <footer>
