--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Zhaoyi's Homepage</title>
-    <link rel="shortcut icon" href="favicon.ico" >
+    
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -29,11 +29,13 @@ My bitbucket account: <a href=https://bitbucket.org/geniuszhaoyi>geniuszhaoyi</a
 My email: <a href="mailto:genius.zhaoyi@gmail.com">genius.zhaoyi@gmail.com</a>. 
 </p>
 
-<h3><a id="who-am-i" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who am I </h3>
+<h3><a id="who-am-i" class="anchor" href="who-am-i" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who am I </h3>
 <p>
 My name is Zhao, Yi. <br>
 I am an undergraduate in <a href=http://www.uestc.edu.cn>University of Electronic Science and Technology of Chine (UESTC)</a>. 
 </p>
+
+<img src=a.gif>
 
       </section>
       <footer>
