--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ I am an undergraduate in <a href=http://www.uestc.edu.cn>University of Electroni
 <h3><a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me </h3>
 <p>
 My github account: <a href=https://github.com/geniuszhaoyi>geniuszhaoyi</a>, <br>
-My bitbucket account: <a href=https://bitbucket.org/geniuszhaoyi>geniuszhaoyi</a>, <br>
+<!--My bitbucket account: <a href=https://bitbucket.org/geniuszhaoyi>geniuszhaoyi</a>, <br> -->
 My email: <a href="mailto:genius.zhaoyi@gmail.com">genius.zhaoyi@gmail.com</a>. 
 </p>
 
-<img src=a.gif>
+<!-- <img src=a.gif> -->
 
       </section>
       <footer>
