--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
 <h3><a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some Promotions</h3>
 <p>
-Zipcar: <a href=https://refer.zipcar.com/s/geniuszhaoyi>https://refer.zipcar.com/s/geniuszhaoyi</a>
+Discover Credit Card: Contact me directly. <br>
+Zipcar: <a href=https://refer.zipcar.com/s/geniuszhaoyi>https://refer.zipcar.com/s/geniuszhaoyi</a><br>
+Ebates: <a href='https://www.ebates.com/r/ZHAOYI143?eeid=28187'>https://www.ebates.com/r/ZHAOYI143?eeid=28187</a>
 </p>
 
 <!-- <img src=a.gif> -->
