--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <h3><a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some Promotions</h3>
 <p>
-Discover Credit Card: <a href='https://refer.discover.com/s/rh2vj'>https://refer.discover.com/s/rh2vj</a><br>
+Discover Credit Card: <a href='http://refer.discover.com/s/mrybn'>http://refer.discover.com/s/mrybn</a><br>
 Zipcar: <a href=https://refer.zipcar.com/s/geniuszhaoyi>https://refer.zipcar.com/s/geniuszhaoyi</a><br>
 Uber: <a href='https://www.uber.com/invite/f3bnnc32ue'>https://www.uber.com/invite/f3bnnc32ue</a><br>
 Ebates: <a href='https://www.ebates.com/r/ZHAOYI143?eeid=28187'>https://www.ebates.com/r/ZHAOYI143?eeid=28187</a>
